[project]
name = "alphavault"
version = "0.1.0"
description = "AlphaVault"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser",
  "litellm",
  "openpyxl",
  "opencc",
  "psycopg",
  "psycopg-pool",
  "pymilvus",
  "python-dotenv",
  "redis",
  "reflex>=0.9.0",
  "requests",
  "sqlalchemy",
  "sqlparams>=6.2.0",
  "supervisor",
  "mcp>=1.27.0",
]

[dependency-groups]
akshare = [
  "akshare",
]
dev = [
  "pre-commit>=3.0.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
